--- a/term05/BASE/02-Strings/hw02.ipynb
+++ b/term05/BASE/02-Strings/hw02.ipynb
@@ -24,7 +24,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ').lower()\n",
+    "string = string.replace('gl', 'L\\'')\n",
+    "string = string.replace('cc', 'XX')\n",
+    "\n",
+    "string = string.replace('che', 'Ke')\n",
+    "string = string.replace('ci' or 'chi', 'CH')\n",
+    "string = string.replace('ca', 'Ka')\n",
+    "string = string.replace('co', 'Ko')\n",
+    "string = string.replace('cu', 'Ku')\n",
+    "string = string.replace('ce', 'CHe')\n",
+    "string = string.replace('XXi', 'CHCH')\n",
+    "\n",
+    "print(string)\n",
+    "\n",
+    "# я не могу больше думать. эта задача делает мне больно"
    ]
   },
   {
@@ -44,7 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ').lower()\n",
+    "i_amt = string.count(' и ')\n",
+    "print(i_amt)"
    ]
   },
   {
@@ -64,7 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "print(string[::-1])"
    ]
   },
   {
@@ -84,7 +101,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "mid =len(string)\n",
+    "if mid % 2:\n",
+    "    new_string = string[mid // 2 + 1:] + string[:mid // 2 + 1]\n",
+    "else:\n",
+    "    new_string = string[mid // 2:] + string[:mid // 2]\n",
+    "print(new_string)"
    ]
   },
   {
@@ -104,7 +127,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "space_ind = string.find(' ')\n",
+    "new_string = string[space_ind + 1:] + ' ' + string[:space_ind]\n",
+    "print(new_string)"
    ]
   },
   {
@@ -124,7 +150,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "f_amt = string.count('f')\n",
+    "if f_amt == 1:\n",
+    "    print(string.find('f'))\n",
+    "elif f_amt > 1:\n",
+    "    print(string.find('f'), string.rfind('f'))"
    ]
   },
   {
@@ -144,7 +175,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "f_amt = string.count('f')\n",
+    "if f_amt > 1:\n",
+    "    fir_f = string.find('f')\n",
+    "    sec_f = string[fir_f + 1:].find('f') + len(string[:fir_f + 1])\n",
+    "    print(sec_f)\n",
+    "elif f_amt == 1:\n",
+    "    print(-1)\n",
+    "else:\n",
+    "    print(-2)"
    ]
   },
   {
@@ -166,7 +206,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "l_h = string.find('h')\n",
+    "r_h = string.rfind('h')\n",
+    "new_string = string[:l_h] + string[r_h + 1:]\n",
+    "print(new_string)"
    ]
   },
   {
@@ -186,7 +230,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "l_h = string.find('h')\n",
+    "r_h = string.rfind('h')\n",
+    "new_string = string[:l_h + 1] + string[r_h - 1:l_h:-1] + string[r_h:]\n",
+    "print(new_string)"
    ]
   },
   {
@@ -206,7 +254,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "string = input('введите строку: ')\n",
+    "l_h = string.find('h')\n",
+    "r_h = string.rfind('h')\n",
+    "new_string = string[:l_h + 1] + string[l_h + 1: r_h].replace('h', 'H') + string[r_h:]\n",
+    "print(new_string)"
    ]
   }
  ],
