--- a/term05/BASE/03-Cycles/sem03.ipynb
+++ b/term05/BASE/03-Cycles/sem03.ipynb
@@ -143,11 +143,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " sd we ss dff s f\n",
+      " sd we ss dff s f\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# решение 1:\n",
+    "s = '     sd      we     ss    dff      s   f'\n",
+    "l = ''\n",
+    "for ind in range(len(s)):\n",
+    "    if s[ind] == ' ' and s[ind + 1] != ' ':\n",
+    "        l += s[ind]\n",
+    "    elif s[ind] != ' ':\n",
+    "        l += s[ind]\n",
+    "print(l)\n",
+    "\n",
+    "# решение 2:\n",
+    "s = '     sd      we     ss    dff      s   f'\n",
+    "l = ' '.join(s.split())\n",
+    "if s[0] == ' ':\n",
+    "    l = ' ' + l\n",
+    "print(l)"
    ]
   },
   {
@@ -191,11 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "summ = 0\n",
+    "while True:\n",
+    "    num_emp = int(input())\n",
+    "    if num_emp == 0:\n",
+    "        break\n",
+    "    summ += num_emp\n",
+    "if summ % 8 == 0:\n",
+    "    print(sum // 8)\n",
+    "else:\n",
+    "    print(summ // 8 + 1)"
    ]
   }
  ],
@@ -206,7 +247,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
