hw03 + 2 tasks from sem03

--- a/term05/BASE/03-Cycles/sem03.ipynb
+++ b/term05/BASE/03-Cycles/sem03.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
     "        break\n",
     "    summ += num_emp\n",
     "if summ % 8 == 0:\n",
-    "    print(sum // 8)\n",
+    "    print(summ // 8)\n",
     "else:\n",
     "    print(summ // 8 + 1)"
    ]
