--- a/term05/BASE/07-Sets/sem07.ipynb
+++ b/term05/BASE/07-Sets/sem07.ipynb
@@ -308,7 +308,7 @@
     "    \n",
     "**Ожидаемый результат**:  \n",
     "\n",
-    "    {'Алексей', 'Андрей', 'Антон', 'Дима', 'Катя'}\n",
+    "    ['Алексей', 'Андрей', 'Антон', 'Дима', 'Игорь']\n",
     " \n",
     "\n",
     "**Подсказки**:  \n",
@@ -341,7 +341,7 @@
     "\n",
     "**Условия**:  \n",
     "\n",
-    "1. На складе уже есть некоторые предметы, представленные в виде множества *warehouse*.  \n",
+    "1. На складе уже есть некоторые предметы, представленные в виде списка *warehouse*.  \n",
     "2. Сотрудники каждый день приносят новые находки, представленные в списке *new_findings*.  \n",
     "3. Иногда пассажиры забирают свои вещи, поэтому есть список *returned_things*.  \n",
     "\n",
@@ -353,7 +353,7 @@
     "\n",
     "**Пример работы функции**:\n",
     "\n",
-    "    warehouse = {\"зонтик\", \"рюкзак\", \"книга\", \"шарф\"}\n",
+    "    warehouse = [\"зонтик\", \"рюкзак\", \"книга\", \"шарф\"]\n",
     "    new_findings = [\"перчатки\", \"зонтик\", \"телефон\"]\n",
     "    returned_things = [\"книга\", \"шарф\"]\n",
     "\n",
@@ -362,12 +362,7 @@
     "    \n",
     "**Ожидаемый результат**:  \n",
     "\n",
-    "    {'зонтик', 'перчатки', 'рюкзак', 'телефон'}\n",
-    "    \n",
-    "**Подсказки**:  \n",
-    "\n",
-    "- Для добавления новых вещей используйте метод .update() множества.  \n",
-    "- Для удаления вещей используйте метод .difference_update() или .discard().  "
+    "    ['зонтик', 'рюкзак', 'перчатки', 'зонтик', 'телефон']"
    ]
   },
   {
