hw06 + ex. 7, 8 from sem06

--- a/term05/BASE/06-Lists/hw06.ipynb
+++ b/term05/BASE/06-Lists/hw06.ipynb
@@ -16,14 +16,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "91ded2e2-3a86-4434-b6f9-2b087cd12bf4",
    "metadata": {
     "id": "atX5rZWryKnF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list: [3, 4, 3, 3, 2, 4, 1, 1, 3, 3]\n",
+      "4 1 "
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import random\n",
+    "data = [random.randint(1, 5) for _ in range(10)]\n",
+    "print('list:', data)\n",
+    "uniq_el = list()\n",
+    "for el in data:\n",
+    "    if el not in uniq_el:\n",
+    "        uniq_el.append(el)\n",
+    "\n",
+    "for i in uniq_el:\n",
+    "    if data.count(i) == 2:\n",
+    "        print(i, end=' ')"
    ]
   },
   {
@@ -42,14 +61,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "77db53c1-93c9-4417-97da-fa26ce20e948",
    "metadata": {
     "id": "wP3CLC7fydll"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['торт', 'метёлка', 'зело', 'метро', 'мебель', 'йогурт', 'зелёнка', 'зелень', 'ёжик', 'ложка', 'порт', 'рыба', 'абрикос']\n",
+      "['абрикос', 'ёжик', 'зелень', 'зелёнка', 'зело', 'йогурт', 'ложка', 'мебель', 'метёлка', 'метро', 'порт', 'рыба', 'торт']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def letter_e(data):    \n",
+    "    base = list()\n",
+    "    for index, word in enumerate(data):\n",
+    "        if 'ё' in word:\n",
+    "            base.append(index)\n",
+    "    return base\n",
+    "\n",
+    "\n",
+    "def sort_with_e(data, ind_e):\n",
+    "    for i in ind_e:\n",
+    "        curr_w = data[i]\n",
+    "        prec_w = data[i - 1]\n",
+    "        e_ind = curr_w.find('ё')\n",
+    "        while ord(prec_w[e_ind]) > ord('е') and curr_w[:e_ind] == prec_w[:e_ind]:\n",
+    "            data[i - 1], data[i] = data[i], data[i - 1]\n",
+    "            i -= 1\n",
+    "            prec_w = data[i - 1]\n",
+    "        if e_ind == 0:\n",
+    "            while ord(prec_w[e_ind]) > ord('е'):\n",
+    "                data[i - 1], data[i] = data[i], data[i - 1]\n",
+    "                i -= 1\n",
+    "                prec_w = data[i - 1]\n",
+    "    return data\n",
+    "\n",
+    "data = ['торт', 'метёлка', 'зело', 'метро', 'мебель', 'йогурт', 'зелёнка', 'зелень', 'ёжик', 'ложка', 'порт', 'рыба', 'абрикос']\n",
+    "print(data)\n",
+    "data.sort()\n",
+    "ind_spec_words = letter_e(data)\n",
+    "# print(data)\n",
+    "# print(ind_spec_words)\n",
+    "new_data = sort_with_e(data, ind_spec_words)\n",
+    "print(new_data)"
    ]
   },
   {
@@ -66,14 +125,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "182a0204-f099-4f0c-903b-7489af4bfbcc",
    "metadata": {
     "id": "o8b2bNIKy5bV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['торт', 'метёлка', 'зело', 'метро', 'мебель', 'йогурт', 'зелёнка', 'зелень', 'ёжик', 'ложка', 'порт', 'рыба', 'абрикос']\n",
+      "рыба\n",
+      "ложка\n",
+      "метёлка\n",
+      "зелёнка\n",
+      "ёжик\n",
+      "зело\n",
+      "метро\n",
+      "абрикос\n",
+      "порт\n",
+      "торт\n",
+      "йогурт\n",
+      "мебель\n",
+      "зелень\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def rev_list(data):\n",
+    "    for ind, word in enumerate(data):\n",
+    "        data[ind] = ''.join(reversed(word))\n",
+    "\n",
+    "\n",
+    "data = ['торт', 'метёлка', 'зело', 'метро', 'мебель', 'йогурт', 'зелёнка', 'зелень', 'ёжик', 'ложка', 'порт', 'рыба', 'абрикос']\n",
+    "print(data)\n",
+    "rev_list(data)\n",
+    "# print(data)\n",
+    "data.sort()\n",
+    "# print(data)\n",
+    "ind_spec_words = letter_e(data)\n",
+    "# print(data)\n",
+    "# print(ind_spec_words)\n",
+    "sort_with_e(data, ind_spec_words)\n",
+    "# print(data)\n",
+    "rev_list(data)\n",
+    "for el in data:\n",
+    "    print(el)"
    ]
   },
   {
@@ -95,15 +193,39 @@
    "metadata": {
     "id": "ceEIBfH7zFwN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list: [4, 4, 2, 2, 1, 4, 1, 1, 6, 5, 5, 2, 4, 1, 6]\n",
+      "[4, 2, 1, 6, 5]\n",
+      "[4, 4, 1, 4, 1, 1, 6, 5, 5, 4, 1, 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import random\n",
+    "data = [random.randint(1, 7) for _ in range(15)]\n",
+    "print('list:', data)\n",
+    "user_num = int(input())\n",
+    "uniq_el = list()\n",
+    "for el in data:\n",
+    "    if el not in uniq_el:\n",
+    "        uniq_el.append(el)\n",
+    "# print(uniq_el)\n",
+    "\n",
+    "for sym in uniq_el:\n",
+    "    if data.count(sym) == user_num:\n",
+    "        while sym in data:\n",
+    "            data.remove(sym)\n",
+    "print(data)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -117,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
