--- a/term05/BASE/06-Lists/sem06.ipynb
+++ b/term05/BASE/06-Lists/sem06.ipynb
@@ -351,9 +351,19 @@
    "metadata": {
     "id": "hpDhd_6qwWu-"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gagner', 'open', 'kedi']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "user_text = input().split()\n",
+    "res = [x for x in user_text if x.isalpha()]\n",
+    "print(res)"
    ]
   },
   {
@@ -370,14 +380,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "076e6c38-1e33-4d8f-ac6c-739f6b2919d4",
    "metadata": {
     "id": "4jfVZkL6wkH2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32, 20, 14]\n",
+      "22.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "user_text = input().split()\n",
+    "res = [int(x) for x in user_text if x.isdigit()]\n",
+    "print(res)\n",
+    "total = sum(res) / len(res)\n",
+    "print(total)"
    ]
   },
   {
@@ -401,9 +424,26 @@
    "metadata": {
     "id": "bPpgIcd6w7wy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all_st: [196, 192, 189, 175, 170, 168]\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "all_st = input('').split()\n",
+    "all_st = [int(x) for x in all_st]\n",
+    "all_st.sort(reverse=True)\n",
+    "print(f'all_st: {all_st}')\n",
+    "petya_height = int(input(''))\n",
+    "for ind, stu in enumerate(all_st):\n",
+    "    if stu == petya_height or stu < petya_height:\n",
+    "        print(ind + 1)\n",
+    "        break"
    ]
   },
   {
@@ -425,9 +465,18 @@
    "metadata": {
     "id": "h3eQHvDRxF-2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ss ss ghjk rfghjkl dfgh\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "user_text = input().split()\n",
+    "print(' '.join(user_text))"
    ]
   },
   {
@@ -448,14 +497,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "20071b16-ee04-4895-a8de-b2505ee94865",
    "metadata": {
     "id": "giuxMASrxuQ1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "нет денег вы но держитесь \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "user_text = input().split()\n",
+    "new_text = ''\n",
+    "for i in range(len(user_text)):\n",
+    "    if i % 2:\n",
+    "        new_text += user_text[i - 1]\n",
+    "    else:\n",
+    "        if i + 1 == len(user_text):\n",
+    "            i -= 1\n",
+    "        new_text += user_text[i + 1]\n",
+    "    new_text += ' '\n",
+    "print(new_text)"
    ]
   },
   {
@@ -470,14 +537,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "41825245-ce6a-4746-b0ff-50cf981f4503",
    "metadata": {
     "id": "giuxMASrxuQ1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['s', 'i', 's', 't', 'e', 'r', 'm', 'o', 't', 'h', 'e', 'r', 'f', 'a', 't', 'h', 'e', 'r']\n",
+      "['s', 'i', 's', 'e', 'r', 'm', 'o', 'h', 'e', 'r', 'f', 'a', 'h', 'e', 'r']\n",
+      "['s', 'i', 's', 'e', 'r', 'm', 'o', 'h', 'e', 'r', 'f', 'a', 'h', 'e', 'r']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "user_list = input().split()\n",
+    "print(user_list)\n",
+    "el_del = input('to delete: ')\n",
+    "new_el = [x for x in user_list if x != el_del]\n",
+    "print(new_el)\n",
+    "while el_del in user_list:\n",
+    "    user_list.remove(el_del)\n",
+    "print(user_list)"
    ]
   },
   {
@@ -509,14 +593,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d6250125-f01a-4ffb-b878-cca6084d9321",
    "metadata": {
     "id": "giuxMASrxuQ1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('мама', 3), ('папа', 3), ('арбуз', 2), ('елка', 2), ('вася', 1), ('котик', 1)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def sort_eq(meh):\n",
+    "    if not meh:\n",
+    "        return meh\n",
+    "    max_el, eq_el, min_el = list(), list(), list()\n",
+    "    elem = meh[len(meh) - 1]\n",
+    "    for el in meh:\n",
+    "        if el[0] > elem[0]:\n",
+    "            max_el.append(el)\n",
+    "        elif el[0] == elem[0]:\n",
+    "            eq_el.append(el)\n",
+    "        else:\n",
+    "            min_el.append(el)\n",
+    "    return min_el + eq_el + max_el\n",
+    "\n",
+    "\n",
+    "def sort_list(meh):\n",
+    "    elem = meh[len(meh) - 1]\n",
+    "    min_li = list()\n",
+    "    equal_li = list()\n",
+    "    max_li = list()\n",
+    "    for el in meh:\n",
+    "        if el[1] > elem[1]:\n",
+    "            max_li.append(el)\n",
+    "        elif el[1] < elem[1]:\n",
+    "            min_li.append(el)\n",
+    "        else:\n",
+    "            equal_li.append(el)\n",
+    "    return min_li, sort_eq(equal_li), max_li\n",
+    "\n",
+    "\n",
+    "def quick_sort(inf):\n",
+    "    if not inf:\n",
+    "        return inf\n",
+    "    min_l, equal_l, max_l = sort_list(inf)\n",
+    "    min_l = quick_sort(min_l)\n",
+    "    max_l = quick_sort(max_l)\n",
+    "    total = max_l + equal_l + min_l\n",
+    "    return total\n",
+    "\n",
+    "\n",
+    "data = [('елка', 2),\n",
+    "    ('арбуз', 2),\n",
+    "    ('котик', 1),\n",
+    "    ('вася', 1),\n",
+    "    ('мама', 3),\n",
+    "    ('папа', 3)]\n",
+    "\n",
+    "resi = quick_sort(data)\n",
+    "print(resi)\n"
    ]
   },
   {
@@ -531,20 +671,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "3249be6e-fed3-4945-b9d0-82623d712456",
    "metadata": {
     "id": "giuxMASrxuQ1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 1, 1, 3, 3]\n",
+      "['елка', 'арбуз', 'котик', 'вася', 'мама', 'папа']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "bata = [('елка', 2),\n",
+    "    ('арбуз', 2),\n",
+    "    ('котик', 1),\n",
+    "    ('вася', 1),\n",
+    "    ('мама', 3),\n",
+    "    ('папа', 3)]\n",
+    "\n",
+    "digit_list = [x[1] for x in bata]\n",
+    "letter_list = [x[0] for x in data]\n",
+    "print(digit_list)\n",
+    "print(letter_list)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -558,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
