--- a/term05/BASE/07-Sets/sem07.ipynb
+++ b/term05/BASE/07-Sets/sem07.ipynb
@@ -422,20 +422,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "edeef84c-2b98-4d95-84a8-0dbb9a261eca",
    "metadata": {
     "id": "tNX3xmulroUO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Аня', 'Борис', 'Даша']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def make_list(m_guests, n_guests):\n",
+    "    m_guests = set(m_guests)\n",
+    "    m_guests -= set(n_guests)\n",
+    "    return sorted(m_guests)\n",
+    "\n",
+    "\n",
+    "my_guests = [\"Аня\", \"Борис\", \"Вика\", \"Глеб\", \"Даша\"]\n",
+    "neighbour_guests = [\"Вика\", \"Глеб\", \"Катя\"]\n",
+    "result_list = make_list(my_guests, neighbour_guests)\n",
+    "print(result_list)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
