update code in PRO lec08

--- a/term05/PRO/08-Delegation,descriptors/lec08.ipynb
+++ b/term05/PRO/08-Delegation,descriptors/lec08.ipynb
@@ -211,7 +211,10 @@
     "\n",
     "  def __setattr__(self, attr, value):\n",
     "    print(f'trying to set attr {attr}')\n",
-    "    self.__dict__[attr] = value"
+    "    if attr != 'employee': # employee мы должны дать установить в исходный класс\n",
+    "        self.employee.__dict__[attr] = value\n",
+    "    else:\n",
+    "        self.__dict__[attr] = value"
    ]
   },
   {
@@ -693,7 +696,46 @@
    "source": [
     "В каком порядке я определяю функции getname, setname & delname (а также как я их называю - можно называть их как угодно), неважно: важно только, в каком порядке я их передаю в метод property. \n",
     "\n",
-    "Переменная name находится на верхнем уровне определения класса, на одном уровне с определениями методов. Но при этом сам атрибут name (точнее говоря, \\_\\_name) будет принадлежать конкретному экземпляру. Мы самому классу приписали свойство, которое теперь будет взаимодействовать со всеми его экземплярами, устанавливая им внутренний атрибут \\_\\_name. Это надо четко себе уяснить: name - не атрибут экземпляра. Это атрибут класса, который хранит в себе *дескриптор*. А дескриптор - это объект, который управляет внутренним атрибутом \\_\\_name. \n",
+    "Переменная name находится на верхнем уровне определения класса, на одном уровне с определениями методов. Но при этом сам атрибут name (точнее говоря, \\_\\_name) будет принадлежать конкретному экземпляру. Мы самому классу приписали свойство, которое теперь будет взаимодействовать со всеми его экземплярами, устанавливая им внутренний атрибут \\_\\_name. Это надо четко себе уяснить: name - не атрибут экземпляра. Это атрибут класса, который хранит в себе *дескриптор*. А дескриптор - это объект, который управляет внутренним атрибутом \\_\\_name. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e5b55f9-b97b-4f19-b502-d849f7708c2e",
+   "metadata": {},
+   "source": [
+    "С property возможно использование синтаксиса декораторов:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6927944f-ff52-414d-bf81-351eeb65c3e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self):\n",
+    "        self.__name = ''\n",
+    "    \n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        return self.__name\n",
+    "    \n",
+    "    @name.setter\n",
+    "    def name(self, val):\n",
+    "        self.__name = val\n",
+    "        \n",
+    "    @name.deleter\n",
+    "    def name(self):\n",
+    "        del self.__name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c544ead-2374-498c-a739-6050f87158e6",
+   "metadata": {},
+   "source": [
     "\n",
     "Да:  property - это разновидность дескриптора вообще. Давайте посмотрим про дескрипторы. "
    ]
@@ -783,6 +825,83 @@
    "outputs": [],
    "source": [
     "vasya.temperature = 36"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e42f75-a7e2-4e0e-ad68-d42ccdd3a34b",
+   "metadata": {},
+   "source": [
+    "Альтернативный и более полный пример:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f860b4b-f140-4c9f-803c-63f18bca9127",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 5,
+     "status": "ok",
+     "timestamp": 1665062126609,
+     "user": {
+      "displayName": "Alexandra Ivoylova",
+      "userId": "06069991353189522669"
+     },
+     "user_tz": -180
+    },
+    "id": "wnYZGEdTQtXG",
+    "outputId": "9f050b91-2adb-42bd-97eb-34bda118bdcf",
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__init__\n",
+      "__init__\n",
+      "__set_name__(owner=<class '__main__.A'>, name=a)\n",
+      "__set_name__(owner=<class '__main__.A'>, name=b)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Descriptors:\n",
+    "    def __init__(self):\n",
+    "        print('__init__')\n",
+    "        self.name = 42\n",
+    "    def __set_name__(self, owner, name):\n",
+    "        \"\"\"Вызывается при создании экземпляра класса, когда мы впервые узнаем, \n",
+    "        что у нас есть атрибут с именем name, и приписываем его нашему классу\"\"\"\n",
+    "        print(f'__set_name__(owner={owner}, name={name})')\n",
+    "        self.name = '_' + name  # тут можно сразу его и задать, причем внутреннее имя немного видоизменяем для ясности\n",
+    "    def __get__(self, instance, owner=None):\n",
+    "        \"\"\"При запрашивании атрибута у экземпляра класса\"\"\"\n",
+    "        print(f'__get__(instance={instance}, owner={owner})')\n",
+    "        return instance.__dict__.get(self.name)\n",
+    "    def __set__(self, instance, value):\n",
+    "        \"\"\"При устанавливании атрибута в виде instance.name = value\"\"\"\n",
+    "        if self.name == 'a':\n",
+    "          print('a')\n",
+    "        instance.__dict__[self.name] = value\n",
+    "    def __delete__(self, instance):\n",
+    "        \"\"\"При удалении атрибута\"\"\"\n",
+    "        print(f'__delete__(instance={instance})')\n",
+    "        del instance.__dict__[self.name]\n",
+    "\n",
+    "class A:\n",
+    "    a = Descriptors()\n",
+    "    b = Descriptors()\n",
+    "    def __repr__(self):\n",
+    "        return 'A()'\n",
+    "\n",
+    "class B(A):\n",
+    "    def __repr__(self):\n",
+    "        return 'B()'"
    ]
   },
   {
