--- a/term05/BASE/08-Dicts/hw08.ipynb
+++ b/term05/BASE/08-Dicts/hw08.ipynb
@@ -12,12 +12,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f99183b7-1308-46cf-a41b-aa2420b67aff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6: шесть\n",
+      "1: один\n",
+      "9: девять\n",
+      "10: десять\n",
+      "4: четыре\n",
+      "Число вне диапазона\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def num_to_words():\n",
+    "    n = int(input('Введите число: '))\n",
+    "    while 0 < n < 11:\n",
+    "        print(f'{n}: {nums[n]}')\n",
+    "        n = int(input('Введите число: '))\n",
+    "    print('Число вне диапазона')\n",
+    "\n",
+    "nums = {1: 'один', 2: 'два', 3: 'три', 4: 'четыре', 5: 'пять', 6: 'шесть', 7: 'семь', \n",
+    "        8: 'восемь', 9: 'девять', 10: 'десять'}\n",
+    "\n",
+    "num_to_words()"
    ]
   },
   {
@@ -35,9 +58,31 @@
    "execution_count": null,
    "id": "9360a7a9-9d54-44b6-b17c-27d65b8d04f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Из слова \"кикимора\" можно составить слово \"кора\"\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def words_construction(s1, s2):\n",
+    "    d1 = {sym: s1.count(sym) for sym in set(s1)}\n",
+    "    d2 = {sym: s2.count(sym) for sym in set(s2)}\n",
+    "    # print(d1, '\\n', d2)\n",
+    "    for letter, amount in d2.items():\n",
+    "        if letter not in d1 or amount > d1[letter]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "user_text_1, user_text_2 = input(), input()\n",
+    "if words_construction(user_text_1, user_text_2):\n",
+    "    print(f'Из слова \"{user_text_1}\" можно составить слово \"{user_text_2}\"')\n",
+    "else:\n",
+    "    print(f'Из слова \"{user_text_1}\" нельзя составить слово \"{user_text_2}\"')"
    ]
   },
   {
@@ -93,12 +138,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d7141b18-855f-4a79-ac07-8fe30e6556d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Добро пожаловать в \"Ресторан приключений\"!\n",
+      "Доступные команды: добавить, удалить, изменить, меню, выход\n",
+      "Блюдо \"пицца\" добавлено в меню с количеством 2.\n",
+      "\n",
+      "Блюдо \"окрошка\" добавлено в меню с количеством 4.\n",
+      "\n",
+      "Текущее меню: \n",
+      "пицца: 2\n",
+      "окрошка: 4\n",
+      "\n",
+      "Блюдо \"окрошка\" обновлено: теперь количество 2.\n",
+      "\n",
+      "Блюдо \"пицца\" изменено: теперь количество 3.\n",
+      "\n",
+      "Такой команды нет\n",
+      "\n",
+      "Такой команды нет\n",
+      "\n",
+      "Блюдо \"огурец\" добавлено в меню с количеством 2.\n",
+      "\n",
+      "Блюдо \"огурец\" удалено из меню.\n",
+      "\n",
+      "Текущее меню: \n",
+      "пицца: 3\n",
+      "окрошка: 2\n",
+      "\n",
+      "До свидания!\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def adding_order():\n",
+    "    global orders\n",
+    "    name = input('Введите название блюда: ')\n",
+    "    am = int(input('Введите количество: '))\n",
+    "    while am < 1:\n",
+    "        print('Число должно быть положительным')\n",
+    "        am = int(input('Введите количество: '))\n",
+    "    if name not in orders:\n",
+    "        orders[name] =  am\n",
+    "        print(f'Блюдо \"{name}\" добавлено в меню с количеством {orders[name]}.')\n",
+    "    else:\n",
+    "        orders[name] += am\n",
+    "        print(f'Блюдо \"{name}\" обновлено: теперь количество {orders[name]}.')\n",
+    "\n",
+    "\n",
+    "def deleting_order():\n",
+    "    global orders\n",
+    "    name = input('Введите название блюда: ')\n",
+    "    amount_to_delete = int(input('Введите количество: '))\n",
+    "    while amount_to_delete < 1:\n",
+    "        print('Число должно быть положительным')\n",
+    "        amount_to_delete = int(input('Введите количество: '))\n",
+    "    orders[name] -= amount_to_delete\n",
+    "    if orders[name] < 1:\n",
+    "        del orders[name]\n",
+    "        print(f'Блюдо \"{name}\" удалено из меню.')\n",
+    "    else:\n",
+    "        print(f'Блюдо \"{name}\" обновлено: теперь количество {orders[name]}.')\n",
+    "\n",
+    "\n",
+    "def changing_order():\n",
+    "    global orders\n",
+    "    name = input('Введите название блюда: ')\n",
+    "    am = int(input('Введите новое количество: '))\n",
+    "    orders[name] = am\n",
+    "    print(f'Блюдо \"{name}\" изменено: теперь количество {orders[name]}.')\n",
+    "\n",
+    "print('Добро пожаловать в \"Ресторан приключений\"!')\n",
+    "print('Доступные команды: добавить, удалить, изменить, меню, выход')\n",
+    "orders = dict()\n",
+    "command = input('\\nВведите команду: ').lower()\n",
+    "while command != 'выход':\n",
+    "    if command == 'добавить':\n",
+    "        adding_order()\n",
+    "    elif command == 'меню':\n",
+    "        print('Текущее меню: ')\n",
+    "        for dish, amount in orders.items():\n",
+    "            print(f'{dish}: {amount}')\n",
+    "    elif command == 'удалить':\n",
+    "        deleting_order()\n",
+    "    elif command == 'изменить':\n",
+    "        changing_order()\n",
+    "    else:\n",
+    "        print('Такой команды нет')\n",
+    "    print()\n",
+    "    command = input('Введите команду: ').lower()\n",
+    "print('До свидания!')"
    ]
   },
   {
@@ -121,18 +256,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "98133cc9-7704-465f-abf3-9ff925bd7ca4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Иванов': {'тарелка': 10, 'футболка': 2}, 'Петров': {'тетрадка': 2, 'ручка': 5}, 'Сидоров': {'кружка': 1}}\n",
+      "Иванов\n",
+      "        тарелка: 10\n",
+      "       футболка: 2\n",
+      "Петров\n",
+      "          ручка: 5\n",
+      "       тетрадка: 2\n",
+      "Сидоров\n",
+      "         кружка: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "data = dict()\n",
+    "people_amt = int(input())\n",
+    "for _ in range(people_amt):\n",
+    "    person = input().split()\n",
+    "    if person[0] not in data:\n",
+    "        data[person[0]] = {person[1]: int(person[2])}\n",
+    "    else:\n",
+    "        if person[1] in data[person[0]]:\n",
+    "            data[person[0]][person[1]] += int(person[2])\n",
+    "        else:\n",
+    "            data[person[0]][person[1]] = int(person[2])\n",
+    "print(data)\n",
+    "for pers, thing in sorted(data.items(), key=lambda x:x[0]):\n",
+    "    print(pers)\n",
+    "    for th in sorted(thing.keys()):\n",
+    "        print(f'{th:>15}: {data[pers][th]}')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
