update hw08 after 11.12

--- a/term05/BASE/06-Lists/hw06.ipynb
+++ b/term05/BASE/06-Lists/hw06.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "77db53c1-93c9-4417-97da-fa26ce20e948",
    "metadata": {
     "id": "wP3CLC7fydll"
@@ -103,12 +103,36 @@
     "\n",
     "data = ['торт', 'метёлка', 'зело', 'метро', 'мебель', 'йогурт', 'зелёнка', 'зелень', 'ёжик', 'ложка', 'порт', 'рыба', 'абрикос']\n",
     "print(data)\n",
-    "data.sort()\n",
-    "ind_spec_words = letter_e(data)\n",
+    "n_data = sorted(data)\n",
+    "ind_spec_words = letter_e(n_data)\n",
     "# print(data)\n",
     "# print(ind_spec_words)\n",
-    "new_data = sort_with_e(data, ind_spec_words)\n",
+    "new_data = sort_with_e(n_data, ind_spec_words)\n",
     "print(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42df9eb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['торт', 'метёлка', 'зело', 'метро', 'мебель', 'йогурт', 'зелёнка', 'зелень', 'ёжик', 'ложка', 'порт', 'рыба', 'абрикос']\n",
+      "['абрикос', 'ёжик', 'зелень', 'зелёнка', 'зело', 'йогурт', 'ложка', 'мебель', 'метёлка', 'метро', 'порт', 'рыба', 'торт']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def forsort(s):\n",
+    "    return [ord(x.lower()) if x.lower() != 'ё' else ord('е') + 0.5 for x in s]\n",
+    "\n",
+    "print(data)\n",
+    "n = sorted(data, key=forsort)\n",
+    "print(n)"
    ]
   },
   {
@@ -172,6 +196,30 @@
     "rev_list(data)\n",
     "for el in data:\n",
     "    print(el)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "526b0055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['торт', 'метёлка', 'зело', 'метро', 'мебель', 'йогурт', 'зелёнка', 'зелень', 'ёжик', 'ложка', 'порт', 'рыба', 'абрикос']\n",
+      "['рыба', 'ложка', 'метёлка', 'зелёнка', 'ёжик', 'зело', 'метро', 'абрикос', 'порт', 'торт', 'йогурт', 'мебель', 'зелень']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def forsort2(s):\n",
+    "    return [ord(x.lower()) if x.lower() != 'ё' else ord('е') + 0.5 for x in s][::-1]\n",
+    "\n",
+    "print(data)\n",
+    "n = sorted(data, key=forsort2)\n",
+    "print(n)"
    ]
   },
   {
